--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/nextjs,webstorm
+.idea/
