--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "next": "14.2.3",
+    "posthog-js": "^1.138.0",
     "react": "^18",
     "react-dom": "^18"
   },
