--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.3.1",
     "next": "14.2.3",
     "posthog-js": "^1.138.0",
+    "posthog-node": "^4.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
