--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/switch": "^2.0.30",
+    "@nextui-org/system": "^2.2.1",
+    "@nextui-org/theme": "^2.2.5",
     "@vercel/analytics": "^1.3.1",
+    "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "posthog-js": "^1.138.0",
     "posthog-node": "^4.0.1",
