--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fds-vertretungsplan",
+  "name": "fds-vertretungsplan-restyle",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,27 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/switch": "^2.0.30",
-    "@nextui-org/system": "^2.2.1",
-    "@nextui-org/theme": "^2.2.5",
-    "@vercel/analytics": "^1.3.1",
-    "framer-motion": "^11.2.10",
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.390.0",
     "next": "14.2.3",
-    "posthog-js": "^1.138.0",
-    "posthog-node": "^4.0.1",
+    "next-themes": "^0.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
+    "eslint-plugin-react": "^7.36.1",
+    "globals": "^15.9.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "prettier-plugin-tailwindcss": "^0.5.11"
+    "typescript-eslint": "^8.5.0"
   }
 }
