--- a/.gitignore
+++ b/.gitignore
@@ -1,154 +1,242 @@
-# Created by https://www.toptal.com/developers/gitignore/api/nextjs,webstorm
-# Edit at https://www.toptal.com/developers/gitignore?templates=nextjs,webstorm
+# .gitignore file created for free with Tower (https://www.git-tower.com/)
+# For suggestions or improvements please contact us using support@git-tower.com
+# Generated on 2025-05-15
+# Includes: macos, webstorm, npm, pnpm, next_js, node
 
-### NextJS ###
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+### Universal ###
+# Common files that should be ignored in all projects
 
-# testing
-/coverage
+# Logs
+*.log
+# Temporary files
+*.tmp
+*~
 
-# next.js
-/.next/
-/out/
+*.bak
+# Environment files (containing secrets, API keys, credentials)
+.env
+*.env
+.env.*
 
-# production
-/build
+# Local configuration that shouldn't be shared
+*.local
 
-# misc
+### Macos ###
+# macOS operating system specific files
+
 .DS_Store
-*.pem
+.AppleDouble
+.LSOverride
+Icon
+._*
 
-# debug
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+
+Temporary Items
+.apdisk
+*.icloud
+.AppleDB/
+.AppleDesktop/
+
+*.AppleDouble
+*.AppleDB
+.Spotlight-V100/
+.Trashes/
+*.swp
+
+Network Trash Folder/
+.DS_Store?
+.Spotlight-V100
+.Trashes
+
+### Webstorm ###
+# WebStorm IDE specific files and settings
+
+# WebStorm
+.idea/
+*.iws
+*.iml
+*.ipr
+
+.idea_modules/
+out/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+
+.idea/jsLibraryMappings.xml
+.idea/watcherTasks.xml
+.idea/jsLinters/
+.idea/inspectionProfiles/
+.idea/codeStyles/
+
+### Npm ###
+# NPM package manager files and directories
+
+# NPM (Node Package Manager)
+node_modules/
+package-lock.json
+.npm/
+.node-gyp/
+
+npm-debug.log*
+.npmrc
+.npm-cache/
+.npm-global/
+.node_repl_history
+
+.env
+npm-shrinkwrap.json
+.npmignore
+.package-lock.json
+npm-debug.log.*
+
+.npm-debug/
+.npm-tmp/
+.npm-tarball/
+node_modules_*
+.npm-init.js
+
+.npm-update-notifier
+.node_modules.ember-try/
+.npm-version
+.node_history
+.v8flags.*
+
+.babel.json
+package.json.bak
+
+### Pnpm ###
+# pnpm package manager specific files
+
+# PNPM
+pnpm-lock.yaml
+pnpm-workspace.yaml
+.pnpm/
+.pnpm-debug.log
+
+.pnpm-store/
+pnpm-lock.yaml.bak
+.pnpmfile.cjs
+node_modules/
+.pnpm-cache/
+
+### Next_js ###
+# next_js specific files
+
+.next/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+### Node ###
+# Node.js dependency directory, logs, and environment files
+
+# Dependencies
+node_modules/
+jspm_packages/
+bower_components/
+web_modules/
+
+# Logs
+logs
+*.log
+*.launch
+connect.lock/
+
+libpeerconnection.log
+.history/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+lerna-debug.log*
 .pnpm-debug.log*
+# Diagnostic reports
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+# Runtime data
 
-# local env files
-.env*.local
+pids
+*.pid
+*.seed
+*.pid.lock
+# Environment
 
-# vercel
-.vercel
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+# Package management
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+.npm
+package-lock.json
+yarn.lock
+.yarn-integrity
+.yarn/cache
 
-### WebStorm ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+# Coverage & Test
 
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+coverage/
+lib-cov
+*.lcov
+.nyc_output
+# Build output
 
-# AWS User-specific
-.idea/**/aws.xml
-
-# Generated files
-.idea/**/contentModel.xml
-
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
-
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
-
-# Gradle and Maven with auto-import
-# When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# .idea/artifacts
-# .idea/compiler.xml
-# .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
-
-# CMake
-cmake-build-*/
-
-# Mongo Explorer plugin
-.idea/**/mongoSettings.xml
-
-# File-based project format
-*.iws
-
-# IntelliJ
+dist/
+build/
+.next/
 out/
+.nuxt
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
+.output
+# Cache & Temporary
+.cache/
+.temp/
+.grunt
 
-# JIRA plugin
-atlassian-ide-plugin.xml
+.lock-wscript
+.fusebox/
+.dynamodb/
+.tern-port
+.vscode-test
 
-# Cursive Clojure plugin
-.idea/replstate.xml
+.node_repl_history
+.webpack/
+# TypeScript
+*.tsbuildinfo
+# Optional REPL history
 
-# SonarLint plugin
-.idea/sonarlint/
+.node_repl_history
+# Additional caches
+.eslintcache
+.stylelintcache
+.parcel-cache
 
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+# Misc
 
-# Editor-based Rest Client
-.idea/httpRequests
+*.tgz
+.serverless/
+.vuepress/dist
+.temp
+.docusaurus
 
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
-
-### WebStorm Patch ###
-# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
-
-# *.iml
-# modules.xml
-# .idea/misc.xml
-# *.ipr
-
-# Sonarlint plugin
-# https://plugins.jetbrains.com/plugin/7973-sonarlint
-.idea/**/sonarlint/
-
-# SonarQube Plugin
-# https://plugins.jetbrains.com/plugin/7238-sonarqube-community-plugin
-.idea/**/sonarIssues.xml
-
-# Markdown Navigator plugin
-# https://plugins.jetbrains.com/plugin/7896-markdown-navigator-enhanced
-.idea/**/markdown-navigator.xml
-.idea/**/markdown-navigator-enh.xml
-.idea/**/markdown-navigator/
-
-# Cache file creation bug
-# See https://youtrack.jetbrains.com/issue/JBR-2257
-.idea/$CACHE_FILE$
-
-# CodeStream plugin
-# https://plugins.jetbrains.com/plugin/12206-codestream
-.idea/codestream.xml
-
-# Azure Toolkit for IntelliJ plugin
-# https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
-.idea/**/azureSettings.xml
-
-# End of https://www.toptal.com/developers/gitignore/api/nextjs,webstorm
-.idea/
+.svelte-kit
