chore: new gitignore
Signed-off-by: cancel-cloud <Laggis_131@icloud.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,243 +1,41 @@
-# .gitignore file created for free with Tower (https://www.git-tower.com/)
-# For suggestions or improvements please contact us using support@git-tower.com
-# Generated on 2025-05-15
-# Includes: macos, webstorm, npm, pnpm, next_js, node
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-### Universal ###
-# Common files that should be ignored in all projects
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# Logs
-*.log
-# Temporary files
-*.tmp
-*~
+# testing
+/coverage
 
-*.bak
-# Environment files (containing secrets, API keys, credentials)
-.env
-*.env
-.env.*
+# next.js
+/.next/
+/out/
 
-# Local configuration that shouldn't be shared
-*.local
+# production
+/build
 
-### Macos ###
-# macOS operating system specific files
-
+# misc
 .DS_Store
-.AppleDouble
-.LSOverride
-Icon
-._*
+*.pem
 
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-
-Temporary Items
-.apdisk
-*.icloud
-.AppleDB/
-.AppleDesktop/
-
-*.AppleDouble
-*.AppleDB
-.Spotlight-V100/
-.Trashes/
-*.swp
-
-Network Trash Folder/
-.DS_Store?
-.Spotlight-V100
-.Trashes
-
-### Webstorm ###
-# WebStorm IDE specific files and settings
-
-# WebStorm
-.idea/
-*.iws
-*.iml
-*.ipr
-
-.idea_modules/
-out/
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-
-.idea/jsLibraryMappings.xml
-.idea/watcherTasks.xml
-.idea/jsLinters/
-.idea/inspectionProfiles/
-.idea/codeStyles/
-
-### Npm ###
-# NPM package manager files and directories
-
-# NPM (Node Package Manager)
-node_modules/
-package-lock.json
-.npm/
-.node-gyp/
-
-npm-debug.log*
-.npmrc
-.npm-cache/
-.npm-global/
-.node_repl_history
-
-.env
-npm-shrinkwrap.json
-.npmignore
-.package-lock.json
-npm-debug.log.*
-
-.npm-debug/
-.npm-tmp/
-.npm-tarball/
-node_modules_*
-.npm-init.js
-
-.npm-update-notifier
-.node_modules.ember-try/
-.npm-version
-.node_history
-.v8flags.*
-
-.babel.json
-package.json.bak
-
-### Pnpm ###
-# pnpm package manager specific files
-
-# PNPM
-pnpm-lock.yaml
-pnpm-workspace.yaml
-.pnpm/
-.pnpm-debug.log
-
-.pnpm-store/
-pnpm-lock.yaml.bak
-.pnpmfile.cjs
-node_modules/
-.pnpm-cache/
-
-### Next_js ###
-# next_js specific files
-
-.next/
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-### Node ###
-# Node.js dependency directory, logs, and environment files
-
-# Dependencies
-node_modules/
-jspm_packages/
-bower_components/
-web_modules/
-
-# Logs
-logs
-*.log
-*.launch
-connect.lock/
-
-libpeerconnection.log
-.history/
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-lerna-debug.log*
 .pnpm-debug.log*
-# Diagnostic reports
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-# Runtime data
 
-pids
-*.pid
-*.seed
-*.pid.lock
-# Environment
+# env files (can opt-in for committing if needed)
+.env*
 
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-# Package management
-
-.npm
-package-lock.json
-yarn.lock
-.yarn-integrity
-.yarn/cache
-
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.*
-# Coverage & Test
-
-coverage/
-lib-cov
-*.lcov
-.nyc_output
-# Build output
-
-dist/
-build/
-.next/
-out/
-.nuxt
-
-.output
-# Cache & Temporary
-.cache/
-.temp/
-.grunt
-
-.lock-wscript
-.fusebox/
-.dynamodb/
-.tern-port
-.vscode-test
-
-.node_repl_history
-.webpack/
-# TypeScript
-*.tsbuildinfo
-# Optional REPL history
-
-.node_repl_history
-# Additional caches
-.eslintcache
-.stylelintcache
-.parcel-cache
-
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-# Misc
-
-*.tgz
-.serverless/
-.vuepress/dist
-.temp
-.docusaurus
-
-.svelte-kit
+# vercel
 .vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
