--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,4 @@ fabric.properties
 !.idea/runConfigurations
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,webstorm+all,nextjs,vercel
+/.env
