--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fds-vertretungsplan",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -18,6 +18,8 @@
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
+    "posthog-js": "^1.266.0",
+    "posthog-node": "^5.8.4",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
