--- a/package.json
+++ b/package.json
@@ -7,28 +7,36 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src instrumentation-client.ts next.config.ts vitest.config.ts",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push",
+    "qstash:schedule": "node --env-file=.env.local scripts/qstash-upsert-dispatch-schedule.mjs",
     "test": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@prisma/client": "^6.17.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@upstash/qstash": "^2.9.0",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
+    "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.5",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "posthog-js": "^1.344.0",
     "posthog-node": "^5.24.14",
     "react": "^19.0.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -40,10 +48,12 @@
     "@types/node": "^20.19.0",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
+    "@types/web-push": "^3.6.4",
     "@vitejs/plugin-react": "^5.1.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "jsdom": "^28.0.0",
+    "prisma": "^6.17.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5",
